Se corrige un error al momento de descartar un multiplicador